using metal handler

--- a/app/views/processes/index.html.erb
+++ b/app/views/processes/index.html.erb
@@ -1,4 +1,4 @@
 <%= javascript_include_tag 'prototype' %>
 <h2>Processes List</h2>
 <pre id="processes">Gathering processes...</pre>  
-<%= periodically_call_remote :url => "/processes/list", :update => "processes", :frequency => 3, :method => :get %>  
+<%= periodically_call_remote :url => "/processes_list", :update => "processes", :frequency => 3, :method => :get %>  
